--- a/cr/icip/refs.bib
+++ b/cr/icip/refs.bib
@@ -253,3 +253,11 @@
   year={1998},
   publisher={IEEE}
 }
+
+@article{sobel1990isotropic,
+  title={An isotropic 3$\times$ 3 image gradient operator},
+  author={Sobel, Irvin},
+  journal={Machine Vision for three-demensional Sciences},
+  year={1990},
+  publisher={Academic Press}
+}
